bk_ida/gccida/c3/gen_formal_list_for_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/c-aux-info.c:596:25: error: use of undeclared identifier 'arg0'
formal_list = ( char *)&arg0; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/c-aux-info.c:603:17: error: subscript of pointer to incomplete type 'struct rtx_def'
v6 = formal_type[2] != *( &global_trees + 27); 
     ~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/c-aux-info.c:608:52: error: subscript of pointer to incomplete type 'struct rtx_def'
this_type = gen_type( &arg0, *( tree *)&formal_type[2], ansi); 
                                        ~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/c-aux-info.c:608:24: error: use of undeclared identifier 'arg0'
this_type = gen_type( &arg0, *( tree *)&formal_type[2], ansi); 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_type/src/obj/c-aux-info.o] Error 1
